Changes on the portfolio and projects different visuals

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,3 +29,11 @@
   color: aqua;
   text-decoration: underline;
 }
+
+.line-height {
+  line-height: 1.5;
+}
+
+.text-sm {
+  font-size: 0.8rem;
+}
