--- a/pages/blog/post.module.css
+++ b/pages/blog/post.module.css
@@ -87,10 +87,25 @@
     background-color: #f88f16;
 }
 
+.code-block {
+    margin-top: 1.5rem;
+}
+
+
+/* Estilo para el índice flotante */
 .toc-container {
     position: sticky;
-    top: 1rem;
-    max-height: 80vh;
-    overflow-y: auto;
-    border: 1px solid #ddd;
-}  
+    top: 1rem; /* El índice se queda pegado a la parte superior del viewport */
+    max-height: 80vh; /* Limita la altura del índice */
+    overflow-y: auto; /* Si el índice es muy largo, se puede desplazar */
+    border: 1px solid #ddd; /* Bordes suaves */
+    background-color: #f7f7f7; /* Fondo claro */
+    border-radius: 8px;
+}
+
+/* En dispositivos móviles el índice desaparece */
+@media (max-width: 767px) {
+    .toc-container {
+        display: none; /* Ocultamos el índice en móviles */
+    }
+}
