--- a/pages/blog/post.module.css
+++ b/pages/blog/post.module.css
@@ -8,8 +8,8 @@
 .markdownContent .blockquote {
     border-left: 4px solid #ddd;
     padding-left: 10px; /* Espaciado a la izquierda del bloque de citas */
-    color: rgb(255, 47, 245);
-    font-family: cursive;
+    color: rgb(199, 75, 193);
+    font-family: monospace;
 }
 
 .markdownContent a:link {
@@ -23,11 +23,13 @@
 
 .markdownContent h1 {
     font-size: 2.5rem;
+    font-weight: bold;
     padding-bottom: 0.5rem;
 }
 
 .markdownContent h2 {
     font-size: 1.5rem;
+    font-weight: bold;
     color: #1a75eb;
     padding-bottom: 0.2rem;
 }
