--- a/pages/blog/post.module.css
+++ b/pages/blog/post.module.css
@@ -13,7 +13,7 @@
 }
 
 .markdownContent a:link {
-    color: aqua;
+    color: rgb(0, 225, 255);
     text-decoration: underline;
     font-style: italic;
 }
@@ -26,6 +26,7 @@
     font-size: 2.5rem;
     font-weight: bold;
     padding-bottom: 0.5rem;
+    line-height: 140%;
 }
 
 .markdownContent h2 {
@@ -33,12 +34,14 @@
     font-weight: bold;
     color: #1a75eb;
     padding: 0.2rem;
+    line-height: 140%;
 }
 
 .markdownContent h3 {
     font-size: 1.2rem;
     color: #1ec52c;
     font-weight: bold;
+    line-height: 140%;
 }
 
 .markdownContent img {
