--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,3 +37,34 @@
 .text-sm {
   font-size: 0.8rem;
 }
+
+/* Ejemplo de estilos generales para markdown en globals.css */
+.markdown {
+  max-width: 100%;
+  margin: 0 auto;
+  line-height: 1.7; /* para que no quede tan pegado */
+}
+
+.markdown h1,
+.markdown h2,
+.markdown h3 {
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+}
+
+.markdown p {
+  margin-bottom: 1em;
+}
+
+.markdown img {
+  display: block;
+  max-width: 100%; /* Evita el scroll horizontal */
+  margin: 1em auto;
+}
+
+.markdown blockquote {
+  border-left: 4px solid #ccc;
+  padding-left: 1em;
+  margin: 1em 0;
+  color: #555;
+}
