--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import "katex/dist/katex.min.css";
+@import 'devicon/devicon.min.css';
 
 * {
   -webkit-touch-callout: none; /* iOS Safari */
