--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,18 @@
                          supported by Chrome, Edge, Opera and Firefox */
 }
 
+::-webkit-scrollbar{
+  width: 12px;
+  background-color: #F5F5F5;
+}
+::-webkit-scrollbar-track{
+  background-color: #CCCCCC;
+}
+::-webkit-scrollbar-thumb{
+  background-color: #0f0d0d;
+  background-image: -webkit-linear-gradient(90deg,transparent,rgba(0, 0, 0, 0.4) 50%,transparent,transparent)
+}
+
 .unselectable {
   -webkit-user-select: none;
   -webkit-touch-callout: none;
